--- a/lang/silent-publish.pot
+++ b/lang/silent-publish.pot
@@ -1,11 +1,11 @@
-# Translation of the WordPress plugin Silent Publish v2.2.1 by Scott Reilly.
-# Copyright (C) 2011 Scott Reilly
+# Translation of the WordPress plugin Silent Publish v2.3 by Scott Reilly.
+# Copyright (C) 2013 Scott Reilly
 # This file is distributed under the same license as the Silent Publish plugin.
 msgid ""
 msgstr ""
-"Project-Id-Version: Silent Publish 2.2.1\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/tag/silent-publish\n"
-"POT-Creation-Date: 2011-12-14 21:14:33+00:00\n"
+"Project-Id-Version: Silent Publish 2.3\n"
+"Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/silent-publish\n"
+"POT-Creation-Date: 2013-01-04 22:55:33+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -13,13 +13,13 @@ msgstr ""
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 
-#: silent-publish.php:112
+#: silent-publish.php:115
 msgid ""
 "If checked, upon publication of this post do not perform any pingbacks, "
 "trackbacks, or update service notifications."
 msgstr ""
 
-#: silent-publish.php:115
+#: silent-publish.php:118
 msgid "Silent publish?"
 msgstr ""
 
@@ -42,5 +42,5 @@ msgid "Scott Reilly"
 msgstr ""
 
 #. Author URI of the plugin/theme
-msgid "http://coffee2code.com"
+msgid "http://coffee2code.com/"
 msgstr ""
